--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
                 <div class="row">
                     <div class="col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure>
-                            <img src="images/profile_Minwoo.jpg" alt="Image" class="img-fluid">
+                            <img src="images/IMG_2201.png" alt="Image" class="img-fluid">
                         </figure>
                     </div>
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
-                            <p>My research interest lies at energy and environmental economics.</p>
-
+                            <p>I am a Ph.D. student in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to health, inequality, and development. In my early works, I investigated the environmental impact of demand-side management program in electricity wholesale market and energy-intensive adaptation to ambient air pollution.
+                                My current works explore the health impact of pollution alerts, the feasibility of power sector decarbonization, and the short- and long-run effects of coal power plant retirements in the U.S. on air quality and economy. </p>
                         </div>
 
                         <!-- <div class="mb-4">
@@ -326,9 +326,11 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li>J. Lee and <b>M. Hyun</b> (2021), “Do pollution alerts improve health outcomes?: Evidence from South Korean particulate matter advisories”
+                            <li>M. Anderson, <b>M. Hyun</b>, and J. Lee (2022), <a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a>,
+                                <em>NBER Working Paper</em>, 29637.
                             </li>
-                            <li><b>M. Hyun</b>, Y. Kim, J. Eom, J. Jewell, and A. Cherp (2021), “Feasibility of rapid decarbonization in a power sector with high coal dependence”
+                            <li><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2021), <a href="https://arxiv.org/abs/2111.02872">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
+                                <em>arXiv</em>, 2111.02872.
                             </li>
                         </ul>
 
@@ -351,6 +353,9 @@
                         <h5 class="h5 mb-4 text-black">Fall 2020:  <a href="teaching_20f.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
                         <h5 class="h5 mb-4 text-black">Winter 2021:  <a href="teaching_21w.html">[ECON 2] Principles of Macroeconomics</a></h5>
                         <h5 class="h5 mb-4 text-black">Spring 2021:  <a href="teaching_21s.html">[ECON 2] Principles of Macroeconomics</a></h5>
+                        <h3 class="h3 mb-4 text-black">2021 - 2022</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2021:  <a href="teaching_21f.html">[ECON 106] Managerial Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2022:  <a href="teaching_22w.html">[ECON 115] Environmental Economics</a></h5>
                     </div>
                 </div>
 
