--- a/teaching_21w.html
+++ b/teaching_21w.html
@@ -113,14 +113,14 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade-up">
-                    <h2 class="section-title mb-3">[ECON 2] Principles of Macroeconomics</h2>
+                    <h2 class="section-title mb-3">[ECON 106] Managerial Economics</h2>
                 </div>
             </div>
 
             <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                 <div class="col-12">
-                    <h5 class="h5 mb-4 text-black">Winter Quarter 2021</h5>
-                    <h5 class="h5 mb-4 text-black">Lecturer: Javier Birchenall</h5>
+                    <h5 class="h5 mb-4 text-black">Fall Quarter 2021</h5>
+                    <h5 class="h5 mb-4 text-black">Lecturer: Cindy Benelli</h5>
 
                 </div>
             </div>
