--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h3 class="h3 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h3>
                         <h5 class="h5 mb-4 text-black">Ph.D. Student in Economics</h5>
+                        <h5 class="h5 mb-4 text-black">M.A. in Economics, Aug 2021</h5>
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
                         </ul>
