--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Minwoo Hyun's Personal Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="cVmczIJthrytMhXyfdrnLE8xsErT6ylOkoKd60T3dcM" />
 
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
