--- a/teaching_22w.html
+++ b/teaching_22w.html
@@ -121,7 +121,7 @@
                 <div class="col-12">
                     <h5 class="h5 mb-4 text-black">Winter Quarter 2022</h5>
                     <h5 class="h5 mb-4 text-black">Lecturer: Kyle Meng</h5>
-                    <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/drive/folders/1eN0cuhpWtCf1t-igcQNQVeMzFSouKRnD">Section 1</a></h5>
+                    <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1WpJm-OcL7fhi8xbd-hTMzgamvHK5lSp6/view?usp=sharing">Section 1</a></h5>
 
                 </div>
             </div>
