--- a/teaching_22w.html
+++ b/teaching_22w.html
@@ -111,6 +111,8 @@
                     <h5 class="h5 mb-4 text-black">Lecturer: Kyle Meng</h5>
                     <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1WpJm-OcL7fhi8xbd-hTMzgamvHK5lSp6/view?usp=sharing">Section 1</a></h5>
                     <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1Yz1JT-SPLKABELfcHLjOONaWd8YteVHd/view?usp=sharing">Section 2</a></h5>
+                    <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1pGhzbqaByEvgO-cpFIkO6XtrysD63K9P/view?usp=sharing">Section 3</a></h5>
+                    
                 </div>
             </div>
 
