--- a/teaching_22s.html
+++ b/teaching_22s.html
@@ -107,8 +107,8 @@
 
             <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                 <div class="col-12">
-                    <h5 class="h5 mb-4 text-black">Winter Quarter 2022</h5>
-                    <h5 class="h5 mb-4 text-black">Lecturer: Kyle Meng</h5>
+                    <h5 class="h5 mb-4 text-black">Spring Quarter 2022</h5>
+                    <h5 class="h5 mb-4 text-black">Lecturer: Antony Millner</h5>
                     <!-- <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1WpJm-OcL7fhi8xbd-hTMzgamvHK5lSp6/view?usp=sharing">Section 1</a></h5>
                     <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1Yz1JT-SPLKABELfcHLjOONaWd8YteVHd/view?usp=sharing">Section 2</a></h5>
                     <h5 class="h5 mb-4 text-black"><a href="https://drive.google.com/file/d/1pGhzbqaByEvgO-cpFIkO6XtrysD63K9P/view?usp=sharing">Section 3</a></h5> -->
