--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                         <h3 class="h3 mb-4 text-black">2021 - 2022</h3>
                         <h5 class="h5 mb-4 text-black">Fall 2021:  <a href="teaching_21f.html">[ECON 106] Managerial Economics</a></h5>
                         <h5 class="h5 mb-4 text-black">Winter 2022:  <a href="teaching_22w.html">[ECON 115] Environmental Economics</a></h5>
+                        <h5 class="h5 mb-4 text-black">Spring 2022:  <a href="teaching_22s.html">[ECON 115] Environmental Economics</a></h5>
                     </div>
                 </div>
 
