--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
                             <p>I am a Ph.D. student in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to health, inequality, and development. In my early works, I investigated the environmental impact of demand-side management program in electricity wholesale market and energy-intensive adaptation to ambient air pollution.
-                                My current works explore the health impact of pollution alerts, the feasibility of power sector decarbonization, and the short- and long-run effects of coal power plant retirements in the U.S. on air quality and economy. </p>
+                                My working papers explore the health impact of pollution alerts and the feasibility of power sector decarbonization. I am currently studying the impact of coal decline on job transitions and migration in the U.S. </p>
                         </div>
 
                         <!-- <div class="mb-4">
@@ -177,6 +177,21 @@
                 </div>
             </div>
         </div>
+
+        <section class="site-section bg-light" id="cv-section">
+            <div class="container">
+                <div class="row mb-5 justify-content-center">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">CV</h2>
+                    </div>
+                </div>
+
+                <body style="width:100%; height:100%; margin:0;">
+                    <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe>
+                </body>
+
+            </div>
+        </section>
 
         <section class="site-section bg-light" id="education-section">
             <div class="container">
