--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                     </div>
                 </div>
 
-                <body style="width:100%; height:100%; margin:0;">
+                <div style="width:100%; height:100%; margin:0;">
                     <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe>
-                </body>
+                </div>
 
             </div>
         </section>
