--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">CV</h2>
+                        <h2 class="section-title mb-3">CV update1</h2>
                     </div>
                 </div>
 
-                <div style="width:100%; height:100%; margin:0;">
+                <div class="row" data-aos="fade-up" data-aos-delay="">
                     <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe>
                 </div>
 
