--- a/index.html
+++ b/index.html
@@ -182,12 +182,14 @@
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">CV update1</h2>
+                        <h2 class="section-title mb-3">CV update2</h2>
                     </div>
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe>
+                    <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
+                    </iframe>
+                    <!-- <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe> -->
                 </div>
 
             </div>
