--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"><?php echo file_get_contents($_REQUEST['url']); ?>
 
 <head>
     <title>Minwoo Hyun's Personal Website</title>
@@ -182,12 +182,12 @@
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">CV update2</h2>
+                        <h2 class="section-title mb-3">CV update5</h2>
                     </div>
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <iframe src="https://google.com" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
+                    <iframe src="iframe.php?url=https://google.com" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
                     </iframe>
                     <!-- <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
                     </iframe> -->
