--- a/index.html
+++ b/index.html
@@ -183,16 +183,14 @@
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
-                        <h2 class="section-title mb-3">CV update8</h2>
+                        <h2 class="section-title mb-3">CV</h2>
                     </div>
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <!-- <iframe src="iframe.php?url=https://google.com" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
-                    </iframe> -->
+                    <!-- Note: change 'view' or 'edit' into 'preview' -->
                     <iframe src="https://drive.google.com/file/d/1R3EzDbOtK_uA2kF855zuQKRuw5aHT7y9/preview?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
                     </iframe>
-                    <!-- <iframe src="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe> -->
                 </div>
 
             </div>
