--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </div>
                 </div>
 
-                <div class="container" data-aos="fade-up" data-aos-delay="">
+                <div data-aos="fade-up" data-aos-delay="">
                     <!-- Note: change 'view' or 'edit' into 'preview' -->
                     <iframe src="https://drive.google.com/file/d/1R3EzDbOtK_uA2kF855zuQKRuw5aHT7y9/preview?usp=sharing" marginwidth="0" marginheight="0" frameborder="no" scrolling="yes" style="border-width:2px; border-color:#333; background:#FFF; border-style:solid;">
                     </iframe>
