--- a/index.html
+++ b/index.html
@@ -403,6 +403,25 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Jun 2022 - Present</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://emlab.ucsb.edu/">Environmental Markets Lab (emLab), UCSB</a></h3>
+                        <h5 class="h5 mb-4 text-black">Graduate Student Researcher</h5>
+                        <ul class="list-unstyled ul-check success">         
+                            <li>Project Title: "<a href="https://emlab.ucsb.edu/programs/climate-energy">Estimating the Effect of Environmental Policy on Welfare Inequality</a>"</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
                         <p>Feb 2019 - Jul 2020</p>
                     </div>
 
