--- a/index.html
+++ b/index.html
@@ -356,8 +356,13 @@
                                 <em>NBER Working Paper</em>, 29637.
                             </li>
                             <li><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2021), <a href="https://arxiv.org/abs/2111.02872">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
-                                <em>arXiv</em>, 2111.02872.
+                                Revise and Resubmit at <em>Renewable and Sustainable Energy Transition</em>.
                             </li>
+
+                            <li><b>M. Hyun</b> (2023), “The Localized Economic Shocks on the Labor Market and Provision of Public Goods: Evidence from the U.S. Coal Decline”</a>,
+                                <em>Working Paper</em>.
+                            </li>
+                            
                         </ul>
 
                     </div>
@@ -383,6 +388,8 @@
                         <h5 class="h5 mb-4 text-black">Fall 2021:  <a href="teaching_21f.html">[ECON 106] Managerial Economics</a></h5>
                         <h5 class="h5 mb-4 text-black">Winter 2022:  <a href="teaching_22w.html">[ECON 115] Environmental Economics</a></h5>
                         <h5 class="h5 mb-4 text-black">Spring 2022:  <a href="teaching_22s.html">[ECON 115] Environmental Economics</a></h5>
+                        <h3 class="h3 mb-4 text-black">2022 - 2023</h3>
+                        <h5 class="h5 mb-4 text-black">Winter 2023:  <a href="teaching_23w.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
                     </div>
                 </div>
 
@@ -404,7 +411,7 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Jun 2022 - Present</p>
+                        <p>Jun 2022 - Dec, 2022</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
