--- a/teaching_23w.html
+++ b/teaching_23w.html
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade-up">
-                    <h2 class="section-title mb-3">[ECON 115] Environmental Economics</h2>
+                    <h2 class="section-title mb-3">[ECON 10A] Intermediate Microeconomic Theory</h2>
                 </div>
             </div>
 
