--- a/index.html
+++ b/index.html
@@ -328,12 +328,18 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
-                                <em>Energy Policy</em>, 147, 111918.
+                            <li><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2023), <a href="https://doi.org/10.1016/j.rset.2023.100050">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
+                                <em>Renewable and Sustainable Energy Transition</em>, 3, 100050.
                             </li>
+
                             <li>J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
                                 <em>Nature Energy</em>, 1-9.
                             </li>
+
+                            <li><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
+                                <em>Energy Policy</em>, 147, 111918.
+                            </li>
+
                         </ul>
 
                     </div>
@@ -352,15 +358,12 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li>M. Anderson, <b>M. Hyun</b>, and J. Lee (2022), <a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a>,
-                                <em>NBER Working Paper</em>, 29637.
-                            </li>
-                            <li><b>M. Hyun</b>, A. Cherp, J. Jewell, Y. Kim, and J. Eom (2023), <a href="https://arxiv.org/abs/2111.02872">“Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea”</a>,
-                                Revise and Resubmit at <em>Renewable and Sustainable Energy Transition</em>.
-                            </li>
-
                             <li><b>M. Hyun</b> (2023), “The Localized Economic Shocks on the Labor Market and Provision of Public Goods: Evidence from the U.S. Coal Decline”</a>,
                                 <em>Working Paper</em>.
+                            </li>
+                            
+                            <li>M. Anderson, <b>M. Hyun</b>, and J. Lee (2022), <a href="https://www.nber.org/papers/w29637">“Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts”</a>,
+                                <em>NBER Working Paper</em>, 29637.
                             </li>
                             
                         </ul>
