--- a/index.html
+++ b/index.html
@@ -475,11 +475,20 @@
                         <h2 class="section-title mb-3">Presentations</h2>
                     </div>
                 </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h4 class="h4 mb-4 text-black">98<sup>th</sup> Western Economic Association International (WEAI) Annual Conference (2023; Scheduled)</h4>
+                        <h5 class="h5 mb-5"><a>Oral Presentation in Concurrent Session</a></h5>
+                        <h5 class="h5 mb-5">San Diego (CA), the U.S.</a></h5>
+                    </div>
+                </div>
     
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <h4 class="h4 mb-4 text-black">42<sup>nd</sup> International Association for Energy Economics (IAEE) International Conference (2019)</h4>
                         <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in Concurrent Session</a></h5>
+                        <h5 class="h5 mb-5">Montréal, Canada</a></h5>
                     </div>
                 </div>
 
@@ -487,13 +496,15 @@
                     <div class="col-12">
                         <h4 class="h4 mb-4 text-black">41<sup>st</sup> International Association for Energy Economics (IAEE) International Conference (2018)</h4>
                         <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in Concurrent Session</a></h5>
+                        <h5 class="h5 mb-5">Groningen, Netherlands</a></h5>
                     </div>
                 </div>
 
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <h4 class="h4 mb-4 text-black">29<sup>th</sup> Production and Operations Management Society (POMS) Annual Conference (2018)</h4>
-                        <h5 class="h5 mb-5">Oral Presentation in Invited Session</h5>
+                        <h5 class="h5 mb-5"><a>Oral Presentation in Invited Session</a></h5>
+                        <h5 class="h5 mb-5">Houston (TX), the U.S.</h5>
                     </div>
                 </div>
 
