--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
-                            <p>I am a Ph.D. student in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to health, inequality, and development. In my early works, I investigated the environmental impact of demand-side management program in electricity wholesale market and energy-intensive adaptation to ambient air pollution.
-                                My working papers explore the health impact of pollution alerts and the feasibility of power sector decarbonization. I am currently studying the impact of coal decline on job transitions and migration in the U.S. </p>
+                            <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to health, inequality, and development. I am currently studying the local fiscal conditions and labor reallocation costs of coal decline, crime and health impacts in coal-rich communities, and the welfare consequences of pollution alerts. </p>
                         </div>
 
                         <!-- <div class="mb-4">
@@ -223,7 +222,7 @@
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h3 class="h3 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h3>
-                        <h5 class="h5 mb-4 text-black">Ph.D. Student in Economics</h5>
+                        <h5 class="h5 mb-4 text-black">Ph.D. Candidate in Economics</h5>
                         <h5 class="h5 mb-4 text-black">M.A. in Economics, Aug 2021</h5>
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
@@ -358,7 +357,7 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li><b>M. Hyun</b> (2023), “The Localized Economic Shocks on the Labor Market and Provision of Public Goods: Evidence from the U.S. Coal Decline”</a>,
+                            <li><b>M. Hyun</b> (2023), “A Collapse in Fossil Fuel Extraction and Provision of Public Goods: Evidence from the U.S. Coal Decline”</a>,
                                 <em>Working Paper</em>.
                             </li>
                             
@@ -481,6 +480,22 @@
                         <h4 class="h4 mb-4 text-black">98<sup>th</sup> Western Economic Association International (WEAI) Annual Conference (2023; Scheduled)</h4>
                         <h5 class="h5 mb-5"><a>Oral Presentation in Concurrent Session</a></h5>
                         <h5 class="h5 mb-5">San Diego (CA), the U.S.</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h4 class="h4 mb-4 text-black">98<sup>th</sup> Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023; Scheduled)</h4>
+                        <h5 class="h5 mb-5"><a>Oral Presentation in Concurrent Session</a></h5>
+                        <h5 class="h5 mb-5">Portland (ME), the U.S.</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h4 class="h4 mb-4 text-black">98<sup>th</sup> London School of Economics and Political Science (LSE) Environment Day (2023)</h4>
+                        <h5 class="h5 mb-5"><a href="https://www.lse-environment-week.com/environment-day">Oral Presentation in Long-Talk Session</a></h5>
+                        <h5 class="h5 mb-5">London, the United Kingdom</a></h5>
                     </div>
                 </div>
     
